# wlan

./: Cargo.toml  README.md  Rocket.toml  create_users.sql
src/: main.rs
static/: index.html  monitor.html.tera  register.html  success.html
