[package]
name = "wlan"
version = "0.1.0"
authors = ["LYB Fans <admin@lyb.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"] }
rocket = "0.4.7"
rocket-client-addr = "0.4.6"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_sqlite_pool"]
